# InvestmentAdvisorAgent

./: .env_example  .gitignore  README.md  example_running.py  pyproject.toml
src/investmentadvisoragent/: agent.py  company_manager.py  company_profiles.json  examples.py  news_manager.py
src/investmentadvisoragent/agents/: __init__.py  goal_planning.py  investment_advisor.py  market_news_agent.py  portfolio_analyst.py
src/investmentadvisoragent/data/: __init__.py  account.py  asset.py  company_info.py  property.py  user_info.py
src/investmentadvisoragent/generic_tools/: account_diversification.py  ask_question_tool.py  compound_interest.py  mortgage_payoff.py
src/investmentadvisoragent/news_db/: chroma.sqlite3
